2020 catalog updates, part 2

--- a/manuals.html
+++ b/manuals.html
@@ -58,7 +58,7 @@ permalink: /manuals
             </thead>
             <tbody class="searchable">
               <tr>
-                <td><a href="/abx-2l">ABX-2L-V2</a><br></td>
+                <td><a href="/abx-2l">ABX-2L-B</a><br></td>
                 <td>AUTOBOX ABX-2L-B<br>Automated system for dual flex lancing of exchanger tube IDs</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/ABX-2L-B_manual.pdf" target="_blank" class="btn btn-sm">PL 673</a><br><small class="grey">Updated: 11/2019</small></td>
                 <td class="text-center"></td>
@@ -106,25 +106,25 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
-                <td><a href="/2inch-badger">BA-LK-P4, BA-BSPP4,<br>BA-MP6R, BA-MP9L,<br>BA-MP9R</a></td>
+                <td><a href="/2inch-badger">BA-LKD-P4, BA-LKD-BSPP4,<br>BA-LKD-MP6R, BA-LKD-MP9L,<br> BA-LKD-MP9R</a></td>
                 <td>2" BADGER<br>Rotary pipe cleaning nozzles</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BA_manual.pdf" target="_blank" class="btn btn-sm">PL 663</a><br><small class="grey">Updated: 08/2019</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BA_manual.pdf" target="_blank" class="btn btn-sm">PL 663</a><br><small class="grey">Updated: 10/2019</small></td>
                 <td class="text-center"></td>
-                <td class="text-center"><a href="/assets/pdf/tool-talks/BA2_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 11/2017</small></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/BA2_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2019</small></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
                 <td><a href="/4inch-badger">BA-H6</a></td>
                 <td>44k 4" BADGER<br>Rotary pipe cleaning nozzle</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BA-H6_Manual.pdf" target="_blank" class="btn btn-sm">PL 600</a><br><small class="grey">Updated: 09/2018</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BA-H6_Manual.pdf" target="_blank" class="btn btn-sm">PL 683</a><br><small class="grey">Updated: 12/2019</small></td>
                 <td class="text-center"></td>
-                <td class="text-center"><a href="/assets/pdf/tool-talks/BA4_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 06/2018</small></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/BA4_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2019</small></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
                 <td><a href="/4inch-badger">BAE-P6, BAE-BSPP6,<br>BAE-TM12</a></td>
                 <td>4" BADGER<br>Rotary pipe cleaning nozzles</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BAE_manual.pdf" target="_blank" class="btn btn-sm">PL 663</a><br><small class="grey">Updated: 08/2019</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BAE_manual.pdf" target="_blank" class="btn btn-sm">PL 663</a><br><small class="grey">Updated: 10/2019</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BA4_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 06/2018</small></td>
                 <td class="text-center"></td>
@@ -132,7 +132,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/6inch-badger">BA-P8, BA-MP9,<br>BA-M24</a></td>
                 <td>6" BADGER<br>Rotary pipe cleaning nozzles</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BA_manual.pdf" target="_blank" class="btn btn-sm">PL 663</a><br><small class="grey">Updated: 08/2019</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BA_manual.pdf" target="_blank" class="btn btn-sm">PL 663</a><br><small class="grey">Updated: 10/2019</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BA6_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 02/2017</small></td>
                 <td class="text-center"></td>
@@ -196,7 +196,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/bjv">BJVE-P16</a></td>
                 <td>10K PSI<br>Self-rotary swivel</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BJVE_manual.pdf" target="_blank" class="btn btn-sm">PL 667</a><br><small class="grey">Updated: 08/2019</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BJVE_manual.pdf" target="_blank" class="btn btn-sm">PL 677</a><br><small class="grey">Updated: 09/2019</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2019</small></td>
                 <td class="text-center"></td>
@@ -204,7 +204,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/bjv">BJVE-P12</a></td>
                 <td>15K PSI<br>Self-rotary swivel</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BJVE_manual.pdf" target="_blank" class="btn btn-sm">PL 667</a><br><small class="grey">Updated: 08/2019</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BJVE_manual.pdf" target="_blank" class="btn btn-sm">PL 677</a><br><small class="grey">Updated: 09/2019</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2019</small></td>
                 <td class="text-center"></td>
@@ -212,7 +212,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/bjv">BJVE-M24</a></td>
                 <td>22K PSI<br>Self-rotary swivel</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BJVE_manual.pdf" target="_blank" class="btn btn-sm">PL 667</a><br><small class="grey">Updated: 08/2019</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BJVE_manual.pdf" target="_blank" class="btn btn-sm">PL 677</a><br><small class="grey">Updated: 09/2019</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2019</small></td>
                 <td class="text-center"></td>
@@ -220,7 +220,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/bjv">BJVE-MP12</a></td>
                 <td>22K PSI<br>Self-rotary swivel</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BJVE_manual.pdf" target="_blank" class="btn btn-sm">PL 667</a></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BJVE_manual.pdf" target="_blank" class="btn btn-sm">PL 677</a><br><small class="grey">Updated: 09/2019</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BJV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 08/2019</small></td>
                 <td class="text-center"></td>
@@ -389,7 +389,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/raptor">RPT</a></td>
                 <td>RAPTOR<br>Pipe cleaning nozzle models: RPT-P8, RPT-MP9, RPT-M24</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/RPT_Manual.pdf" target="_blank" class="btn btn-sm">PL 543</a><br><small class="grey">Updated: 01/2019</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/RPT_Manual.pdf" target="_blank" class="btn btn-sm">PL 543</a><br><small class="grey">Updated: 10/2019</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/RPT_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 07/2017</small></td>
                 <td class="text-center"></td>
@@ -515,18 +515,18 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
-                <td><a href="/striker">SKR-100</a></td>
+                <td><a href="/striker">SKR-STD</a></td>
                 <td>STRIKER<br>Remote shotgunning system </td>
-                <td class="text-center"><a href="/assets/pdf/manuals/SKR_manual.pdf" target="_blank" class="btn btn-sm">PL 605</a><br><small class="grey">Updated: 01/2019</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/SKR_manual.pdf" target="_blank" class="btn btn-sm">PL 605</a><br><small class="grey">Updated: 10/2019</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/SKR_data_sheet.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/SKR_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 10/2016</small></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
-                <td><a href="/striker">SKRL</a></td>
+                <td><a href="/striker">SKRL-100</a></td>
                 <td>LIGHTWEIGHT STRIKER<br>Remote shotgunning system </td>
-                <td class="text-center"><a href="/assets/pdf/manuals/SKRL_manual.pdf" target="_blank" class="btn btn-sm">PL 605</a><br><small class="grey">Updated: 03/2019</small></td>
-                <td class="text-center"><a href="/assets/pdf/data-sheets/striker_skrl_data_sheet.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/SKRL_manual.pdf" target="_blank" class="btn btn-sm">PL 605</a><br><small class="grey">Updated: 10/2019</small></td>
+                <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/striker_skrl_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 06/2017</small></td>
                 <td class="text-center"></td>
               </tr>
@@ -728,7 +728,7 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
-                <td>ABX-2L</td>
+                <td>ABX-2L-V2</td>
                 <td>AUTOBOX ABX-2L - Version 2</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/ABX-2L-V2_manual.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
                 <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_ABX-2L-V2.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
@@ -760,13 +760,13 @@ permalink: /manuals
               <tr>
                 <td>BADGER 2"</td>
                 <td>LOCKING HEAD VERSION<br>Models: BA-LK-P4, BA-BSPP4, BA-MP6R, BA-MP9L, BA-MP9R</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BA_manual.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BA-LK_Manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
                 <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_BA2_LK.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
                 <td>BADGER 4"</td>
                 <td>Models: BA-BSPP6, BA-P6, BA-TM12</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BA_manual.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BA-LK_Manual_OBS.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
                 <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_BA4.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
