--- a/rotary-waterblast-tools/badger-2in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-2in-pipe-cleaning.html
@@ -70,8 +70,9 @@ master-slider: yes
       <h2>Features</h2>
       <ul class="feature-list">
         <li>Navigates pipes with bends as small as 2 inches (51 mm) in diameter</li>
-        <li>Easily replaceable drilled head design &mdash; swap out quickly to change jet patterns, low-cost replacement</li>
-        <li>Multiple jetting options allow the tool to be optimized for a variety of pump pressures and flows - unplug, polish, or run longer lines based on jetting</li>
+        <li>New drilled heads improve reliability while delivering the same power and life</li>
+        <li>Three pre-drilled heads available, covering all required pressure and flow configurations</li>
+        <li>Engineered for long term use with low cost head replacements and no bearings, seals or lubricants to maintain</li>
         <li>Optional fairing available to streamline tool during retrieval</li>
       </ul>
       
@@ -105,14 +106,13 @@ master-slider: yes
             <div class="col-sm-5">
               <!-- Nav tabs -->
               <ul class="nav nav-tabs" role="tablist">
-                <li role="presentation" class="active"><a href="#p4" aria-controls="p4" role="tab" data-toggle="tab">1/4" Inlet</a></li>
-                <li role="presentation"><a href="#mp6" aria-controls="mp6" role="tab" data-toggle="tab">3/8" Inlet</a></li>
-                <li role="presentation"><a href="#mp9" aria-controls="mp9" role="tab" data-toggle="tab">9/16" Inlet</a></li>
+                <li role="presentation" class="active"><a href="#15k" aria-controls="15k" role="tab" data-toggle="tab">15k/1000 bar</a></li>
+                <li role="presentation"><a href="#22k" aria-controls="22k" role="tab" data-toggle="tab">22k/1500 bar</a></li>
               </ul>
               <!-- Tab panes -->
               <div class="tab-content">
-                <!-- 1/4 -->
-                <div role="tabpanel" class="tab-pane active" id="p4">
+                <!-- 15k -->
+                <div role="tabpanel" class="tab-pane active" id="15k">
                   <table class="table specs table-hover">
                   <tbody>
                     <tr>
@@ -164,8 +164,8 @@ master-slider: yes
                   </tbody>
                   </table>
                 </div>
-                <!-- 3/8 -->
-                <div role="tabpanel" class="tab-pane" id="mp6">
+                <!-- 22k -->
+                <div role="tabpanel" class="tab-pane" id="22k">
                   <table class="table specs table-hover">
                   <tbody>
                     <tr>
@@ -174,7 +174,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Tool Model</th>
-                      <td colspan="2">BA-LKD-MP6R</td>
+                      <td colspan="2">BA-LKD-MP6R, BA-LKD-MP9L,<br/>BA-LKD-MP9R</td>
                     </tr>
                     <tr>
                       <th>Pressure Range</th>
@@ -192,60 +192,7 @@ master-slider: yes
                     </tr>
                     <tr>
                       <th>Inlet Connection</th>
-                      <td colspan="2">3/8 MP</td>
-                    </tr>
-                    <tr>
-                      <th>Diameter</th>
-                      <td>1.3 in.</td>
-                      <td><span class="metric">33 mm</span></td>
-                    </tr>
-                    <tr>
-                      <th>Length</th>
-                      <td>2.0 in.</td>
-                      <td><span class="metric">50 mm</span></td>
-                    </tr>
-                    <tr>
-                      <th>Weight</th>
-                      <td>0.45 lb</td>
-                      <td><span class="metric">0.20 kg</span></td>
-                    </tr>
-                    <tr>
-                      <th>Maximum Water Temp.</th>
-                      <td>250 &deg;F</td>
-                      <td><span class="metric">120 &deg;C</span></td>
-                    </tr>
-                  </tbody>
-                  </table>
-                </div>
-                <!-- 9/16 -->
-                <div role="tabpanel" class="tab-pane" id="mp9">
-                  <table class="table specs table-hover">
-                  <tbody>
-                    <tr>
-                      <th>Tool Family</th>
-                      <td colspan="2">Badger</td>
-                    </tr>
-                    <tr>
-                      <th>Tool Model</th>
-                      <td colspan="2">BA-LKD-MP6R</td>
-                    </tr>
-                    <tr>
-                      <th>Pressure Range</th>
-                      <td>15–22k psi</td>
-                      <td><span class="metric">1034–1500 bar</span>
-                    </tr>
-                    <tr>
-                      <th>Flow Range</th>
-                      <td>9.5-18.5 gpm</td>
-                      <td><span class="metric">36–70 LPM</span></td>
-                    </tr>
-                    <tr>
-                      <th>Rotation Speed</th>
-                      <td colspan="2">High speed</td>
-                    </tr>
-                    <tr>
-                      <th>Inlet Connection</th>
-                      <td colspan="2">9/16 MP</td>
+                      <td colspan="2">3/8 MP, 9/16 MP</td>
                     </tr>
                     <tr>
                       <th>Diameter</th>
