--- a/rotary-waterblast-tools/badger-6in-pipe-cleaning.html
+++ b/rotary-waterblast-tools/badger-6in-pipe-cleaning.html
@@ -57,17 +57,16 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">The 6” Badger features adjustable speed control which allows operators to meet the demands of the task at hand – slower speeds for tough deposits and plugs, faster rotation for easier jobs or polishing.</p>
+      <p class="product-description">The 6" Badger is a compact self-rotary nozzle with adjustable speed control capable of navigating 90 degree elbows in pipes as small as 6 in. (152 mm) in diameter.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
-        <li>Only rotary pipe cleaning tool on the market with adjustable speed control for fine-tuning to specific requirements</li>
         <li>Different jetting configurations allow for more or less pull and forward hitting power</li>
-        <li>Navigates elbows as small as 6 in. (152 mm)</li>
-        <li>Speed controlled rotary tools provide complete internal coverage with optimum jet delivery</li>
-        <li>Maximize cleaning by choosing slower speeds for hard to clean or plugged pipes, and faster speeds for polishing easy to clean pipes with a single tool</li>
+        <li>Navigates elbows down to 6 in. (152 mm)</li>
+        <li>Speed controlled rotary tools provide complete internal cleaning coverage and optimum jet delivery</li>
+        <li>Maximize cleaning by choosing slower speeds for hard to clean or plugged pipes and faster speeds for polishing easy to clean pipes with a single tool</li>
         <li>Optimize the tool for a variety of pumps pressures and flows with multiple jetting options</li>
-        <li>Centralizer options for larger pipe sizes available</li>
+        <li>Pair with the ABX-500 for hands-free pipe cleaning</li>
       </ul>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
