--- a/rotary-waterblast-tools/banshee-tube-cleaners.html
+++ b/rotary-waterblast-tools/banshee-tube-cleaners.html
@@ -61,7 +61,7 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">The patented Banshee is the industry standard for exchanger cleaning. Each tool is easily configured to suit any tube cleaning application by choosing from a variety of replaceable heads and inlet options.</p>
+      <p class="product-description">The patented Banshee is the industry standard for exchanger cleaning. High pressure water acts as a liquid bearing, eliminating ball bearings, seals or lubricant used in conventional rotary tools. Each tool is easily configured to suit any tube cleaning application by choosing from a variety of replaceable heads and inlet options.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
@@ -744,7 +744,7 @@ master-slider: yes
                 <h3>Documentation</h3>
                 <li><a href="/assets/pdf/tool-talks/BN_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee Tool Talk</a></li>
                 <li><a href="/assets/pdf/reference/BN_hose_chart.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee Hose Chart</a></li>
-                <li><a href="/assets/pdf/reference/BN_configurator.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee Configurator</a></li>
+                <li><a href="/assets/pdf/reference/BN_configurator.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Banshee Head Configuration</a></li>
               </ul>
             </div>
             <aside class="col-sm-3 col-sm-offset-1 aside-box">
