--- a/rotary-waterblast-tools/bjv-pipe-cleaning.html
+++ b/rotary-waterblast-tools/bjv-pipe-cleaning.html
@@ -67,11 +67,11 @@ master-slider: yes
       
       <h2>Features</h2>
       <ul class="feature-list">
-        <li>Most versatile nozzle in the industry</li>
-        <li>Compatible with a wide range of heads and jetting configurations for any pump up to 40k psi/2800 bar or up to 200 gpm/757 LPM</li>
-        <li>Can be customized and accessorized for cleaning pipes and vessels from 4” up to 60” in diameter under the most adverse conditions</li>
-        <li>10K, 15K, and 22K models run 3X longer between service intervals saving considerable  service cost with less downtime</li>
-        <li>Speed control guaranteed to be maintenance-free for three years</li>
+        <li>Clean 6 in. (152 mm) pipes to 15 ft (4.5 m) diameter tanks with simple modifications</li>
+        <li>Interchangeable heads allow the tool to be used with any type of pump</li>
+        <li>Multiple head options to allow for flush mounted nozzles, extension arms, plugs and pulling rings</li>
+        <li>Simple nozzle changes allow operators to configure for multiple cleaning applications</li>
+        <li>Easy to pair with AutoBox ABX-500 for hands-free pipe or tank cleaning</li>
         <li>Pair with the <a href="/abx-500">AutoBox ABX-500</a> for a hands-free solution to many cleaning jobs</li>
       </ul>
 
@@ -481,14 +481,8 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Manuals</h3>
-                <li><a href="/assets/pdf/manuals/BJVE_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJVE Manual (Extended Life, up to 22k psi/1500 bar)</a></li>
-                <li>&nbsp;</li>
-                <li><a href="/assets/pdf/manuals/BJV-P16_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV-P16 Tool Manual</a></li>
-                <li><a href="/assets/pdf/manuals/BJV-P12_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV-P12 Tool Manual</a></li>
-                <li><a href="/assets/pdf/manuals/BJV-M24_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV-M24 Tool Manual</a></li>
-                <li><a href="/assets/pdf/manuals/BJV-MP12_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV-MP12 Tool Manual</a></li>
-                <li><a href="/assets/pdf/manuals/BJV-H9_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV Manual (40k psi/2800 bar)</a></li>
-                <li></li>
+                <li><a href="/assets/pdf/manuals/BJVE_manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV Manual - Extended Life, up to 22k psi</a></li>
+                <li><a href="/assets/pdf/manuals/BJV-H9_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;BJV Manual - 40k psi</a></li>
               </ul>
             </div>
             <div class="col-sm-4">
