--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -71,10 +71,9 @@ master-slider: yes
       <h2>Features</h2>
       <ul class="feature-list">
         <li>Lightweight, modular design allows a single operator to move, set up and run</li>
-        <li>Quick-swap rollers can be changed without tools to accommodate different hose sizes</li>
-        <li>Hose clamp pressure and feed rates can be remotely adjusted on the fly for repeatable, consistent cleaning</li>
+        <li>Accomodates a wide range of hose sizes</li>
+        <li>Hose clamp pressure and feed rates can be remotely adjusted for repeatable, consistent cleaning</li>
         <li>Proven reliability on the toughest jobs and most corrosive environments</li>
-        <li>Low cost of ownership – low cost components, quick and easy maintenance</li>
       </ul>
       
       <div class="accessories">
@@ -98,7 +97,7 @@ master-slider: yes
                 <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>
                 <li><a href="#section-bar-3"><span>Videos</span></a></li>
 <!--                  <li><a href="#section-bar-4"><span>Questions</span></a></li>-->
-              <li><a href="#section-bar-4"><span>Service Kits</span></a></li>
+<!--              <li><a href="#section-bar-4"><span>Service Kits</span></a></li>-->
             </ul>
         </nav>
         <div class="content-wrap">
@@ -114,7 +113,7 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Tool Model</th>
-                  <td colspan="2">ABX-2L-V2</td>
+                  <td colspan="2">ABX-2L-B</td>
                 </tr>
                 <tr>
                   <th>Hose Size</th>
@@ -122,8 +121,8 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Hose Feed Rate</th>
-                  <td>0.2–3.0 ft/sec</td>
-                  <td><span class="metric">0.06–0.90 m/sec</span></td>
+                  <td>0.3–3.0 ft/sec</td>
+                  <td><span class="metric">0.09–0.90 m/sec</span></td>
                 </tr>
                 <tr>
                   <th>Push/Pull Force</th>
@@ -142,13 +141,13 @@ master-slider: yes
                 </tr>
                 <tr>
                   <th>Dimensions</th>
-                  <td> 8.3 x 16.7 x 7.2 in.</td>
-                  <td><span class="metric">211 x 424 x 183 mm</span></td>
+                  <td> 8.3 x 16.9 x 8.2 in.</td>
+                  <td><span class="metric">211 x 429 x 208 mm</span></td>
                 </tr>
                 <tr>
                   <th>Weight</th>
-                  <td>42 lbs</td>
-                  <td><span class="metric">19 kg</span></td>
+                  <td>43 lbs</td>
+                  <td><span class="metric">20 kg</span></td>
                 </tr>
               </tbody>
               </table>
@@ -174,19 +173,14 @@ master-slider: yes
               <ul class="list-unstyled basic">
                 <h3>Manuals</h3>
 <!--                <li><a href="/assets/pdf/manuals/ABX-2L-V2_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-2L User Manual</a> <em class="grey">- Current 8mm version</em></li>-->
-                <li><a href="/assets/pdf/manuals/ABX-2L-V2_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-2L User Manual</a> 
-<!--                  <em class="grey">- Closed guide tube assembly</em></li>-->
-                <li><a href="/assets/pdf/manuals/ABX-2L_Upgrade_Guide.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-2L Upgrade Guide (6mm to 8mm)</a></li>
+                <li><a href="/assets/pdf/manuals/ABX-2L-B_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;ABX-2L User Manual</a></li>
                 <li><a href="/assets/pdf/manuals/CB-ABX_user_manual.pdf" target="_blank"><i class="fa fa-book"></i> &nbsp;CB-ABX Control Box User Manual</a></li>
-                <li><a href="/assets/pdf/manuals/ABX-2L_Belt_Installation.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L Belt Replacement Addendum</a></li>
               </ul>
             </div>
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
-                <li><a href="/assets/pdf/data-sheets/ABX-2L_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L Brochure</a></li>
                 <li><a href="/assets/pdf/tool-talks/ABX-2L_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;ABX-2L Tool Talk</a></li>
-                <li><a href="/assets/pdf/data-sheets/AutoPack_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;AutoPack Brochure</a></li>
               </ul>
             </div>
             <aside class="col-sm-3 col-sm-offset-1 aside-box">
@@ -230,168 +224,6 @@ master-slider: yes
                 <p class="caption">AutoPack Exchanger Cleaning Kits</p>
               </div>
             </div>
-          </section>
-
-          <!-- Questions
-          <section id="section-bar-4">
-            <div class="col-sm-8">
-              <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-                <div class="panel panel-default">
-                  <div class="panel-heading" role="tab" id="headingOne">
-                    <h4 class="panel-title">
-                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                        What items are required for a complete working configuration of the AutoBox ABX-2L?<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-                      </a>
-                    </h4>
-                  </div>
-                  <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
-                    <div class="panel-body">
-                      <ul>
-                        <li>ABX-2L hose tractor</li>
-                        <li>Lance guide assembly</li>
-                        <li>Guide tubes</li>
-                        <li>Backout collet</li>
-                        <li>Hose feed stop</li>
-                        <li>Control box</li>
-                      </ul>
-                      <h3>You may also need the following:</h3>
-                      <ul>
-                        <li>Positioner, with appropriate length of drive rail</li>
-                        <li>Positioner mounting clamps</li>
-                        <li>Flex lances</li>
-                        <li>Rotary nozzles</li>
-                        <li>Hose feed stop</li>
-                        <li>Y manifold</li>
-                      </ul>
-                      <a href="/assets/pdf/tool-talks/ABX-2L_tool_talk.pdf" target="_blank">See the Tool Talk for complete configuration information.</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="panel panel-default">
-                  <div class="panel-heading" role="tab" id="headingTwo">
-                    <h4 class="panel-title">
-                      <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        What information is needed in order to properly configure a working system? <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-                      </a>
-                    </h4>
-                  </div>
-                  <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-                    <div class="panel-body">
-                      <ul>
-                        <li>Tube diameter/Size of rotary tool</li>
-                        <li>Size of hose</li>
-                        <li>Diameter of tube bundle ( to determine positioner window size)</li>
-                        <li>Length of guide tubes required (Standard 12.5” and 36” lengths, custom lengths also available)</li>
-                        <li>Preferred mounting clamp</li>
-                      </ul>
-                      <a href="/assets/pdf/tool-talks/ABX-2L_tool_talk.pdf" target="_blank">See the Tool Talk for complete configuration information.</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="panel panel-default">
-                  <div class="panel-heading" role="tab" id="headingThree">
-                    <h4 class="panel-title">
-                      <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                        What are the maintenance/wear items? <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-                      </a>
-                    </h4>
-                  </div>
-                  <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-                    <div class="panel-body">
-                      <p>Replacement parts kits are available for belt and rollers.</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <aside class="col-sm-3 col-sm-offset-1 aside-box">
-              <h3>Need Support?</h3>
-              <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
-              <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
-            </aside>
-          </section> -->
-
-          <!-- Kits -->
-          <section id="section-bar-4">
-            <div class="col-sm-8">
-              <h3>The following kits are available:</h3>
-              <p><em class="grey">Click to view kit contents</em></p>
-              <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-                <div class="panel panel-default">
-                  <div class="panel-heading" role="tab" id="headingOne">
-                    <h4 class="panel-title">
-                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                        <strong>ABX 614</strong> ABX-2L Belt Replacement Kit<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-                      </a>
-                    </h4>
-                  </div>
-                  <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
-                    <div class="panel-body">
-                      <ul>
-                        <li>Drive belt</li>
-                        <li>Belt Replacement Addendum</li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <div class="panel panel-default">
-                  <div class="panel-heading" role="tab" id="headingTwo">
-                    <h4 class="panel-title">
-                      <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        <strong>ABX-2L EPP</strong> Extra Parts Package - Large rollers<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-                      </a>
-                    </h4>
-                  </div>
-                  <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-                    <div class="panel-body">
-                      <ul>
-                        <li>Drive rollers, set</li>
-                        <li>Required square key</li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <div class="panel panel-default">
-                  <div class="panel-heading" role="tab" id="headingThree">
-                    <h4 class="panel-title">
-                      <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseTwo">
-                        <strong>ABX-2L EPPS</strong> Extra Parts Package - Small rollers<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-                      </a>
-                    </h4>
-                  </div>
-                  <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-                    <div class="panel-body">
-                      <ul>
-                        <li>Drive rollers, set</li>
-                        <li>Required square key</li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <div class="panel panel-default">
-                  <div class="panel-heading" role="tab" id="headingFour">
-                    <h4 class="panel-title">
-                      <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                        <strong>ABX-2L EP-001</strong> Extra Parts Package - Large &amp; standard size rollers<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-                      </a>
-                    </h4>
-                  </div>
-                  <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-                    <div class="panel-body">
-                      <ul>
-                        <li>Drive rollers, 2 sizes</li>
-                        <li>Required square key</li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <aside class="col-sm-3 col-sm-offset-1 aside-box">
-              <h3>Need Support?</h3>
-              <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
-              <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
-            </aside>
           </section>
 
         </div><!-- /content -->
