--- a/waterblast-automation/autobox-abx-500.html
+++ b/waterblast-automation/autobox-abx-500.html
@@ -70,7 +70,7 @@ master-slider: yes
         <li>Remotely adjust feed rates and clamp pressure to match job conditions</li>
         <li>Proven reliability on the toughest jobs and most corrosive environments</li>
         <li>Accommodates hoses and couplings up to 1.75 in. (44.5 mm) OD</li>
-        <li>Pairs with StoneAge 2D and 3D tools for horizontal or vertical operation</li>
+        <li>Pairs with StoneAge 2D and 3D tools for horizontal or vertical pipe and tank cleaning</li>
       </ul>
       
       <div class="accessories">
