--- a/waterblast-automation/autobox-abx-pro.html
+++ b/waterblast-automation/autobox-abx-pro.html
@@ -353,6 +353,10 @@ master-slider: yes
         <h5>ProDrain</h5></a>
       </div>
       <div class="item">
+        <a href="/pro-strap-mount"><img class="img-responsive" src="/assets/img/product/thumb-bop-050-01.jpg" alt="AutoBox ABX-PRO strap mount assembly">
+        <h5>ABX-PRO Strap Mount</h5></a>
+      </div>
+      <div class="item">
         <a href="/beetle"><img class="img-responsive" src="/assets/img/product/thumb-bt-03.jpg" alt="Beetle tube cleaning tools">
         <h5>Beetle</h5></a>
       </div>
