--- a/waterblast-automation/autopack-2l-b.html
+++ b/waterblast-automation/autopack-2l-b.html
@@ -56,9 +56,7 @@ master-slider: yes
         <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">Built around the <a href="/abx-2l">AutoBox ABX-2L-Belt</a> version dual lance
-tractor, the AutoPack-2L-B is equipped with everything you need to successfully complete tube bundle or Fin Fan
-heat exchanger tube cleaning.</p>
+      <p class="product-description">Built around the <a href="/abx-2l">AutoBox ABX-2L</a> belt version dual lance tractor, the AutoPack-2L-B is equipped with everything you need to successfully complete tube bundle or Fin Fan heat exchanger tube cleaning.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
