--- a/waterblast-automation/autopack-pro.html
+++ b/waterblast-automation/autopack-pro.html
@@ -252,6 +252,14 @@ master-slider: yes
         <a href="/abx-2l"><img class="img-responsive" src="/assets/img/product/thumb-abx-2l-01.jpg" alt="AutoBox ABX-2L exchanger tube cleaning">
         <h5>AutoBox ABX-2L</h5></a>
       </div>
+      <div class="item">
+        <a href="/prodrain"><img class="img-responsive" src="/assets/img/product/thumb-prodrain-01.jpg" alt="ProDrain PRO-700">
+        <h5>ProDrain</h5></a>
+      </div>
+      <div class="item">
+        <a href="/pro-strap-mount"><img class="img-responsive" src="/assets/img/product/thumb-bop-050-01.jpg" alt="AutoBox ABX-PRO strap mount assembly">
+        <h5>ABX-PRO Strap Mount</h5></a>
+      </div>
     </div>
   </div>
 </section>
