--- a/waterblast-automation/prodrain.html
+++ b/waterblast-automation/prodrain.html
@@ -221,8 +221,8 @@ master-slider: yes
   <div class="container padding-tb-30">
     <div class="col-md-7">
 
-      <h2>Protect hoses while improving job site safety</h2>
-        <p>The HWB safely stores hoses, easily moves from job to job and reduces trip hazards.</p>
+      <h2>Automated drain cleaning</h2>
+        <p>An automated solution for cleaning drains safetly and effectively.</p>
     </div>
     <div class="col-md-4 col-md-offset-1">
       <table>
