--- a/waterblast-automation/striker-lightweight.html
+++ b/waterblast-automation/striker-lightweight.html
@@ -77,8 +77,8 @@ master-slider: yes
         <li>Modular system designed for portability</li>
         <li>Can be fully assembled in less than 5 minutes</li>
         <li>Fits through 21 in. (534 mm) manway</li>
+       <li>Custom 10k and 20k nozzles - engineered to ensure safe operation while delivering maximum thrust</li>
         <li>Affordable alternative to complicated robotic systems</li>
-        <li>CE Certified</li>
       </ul>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
@@ -158,14 +158,10 @@ master-slider: yes
           </tbody>
           </table>
         </div>
-        <aside class="col-sm-3 col-sm-offset-2 aside-box">
-          <h3>Package includes:</h3>
-            <ul class="list-unstyled">
-              <li>SKR 100 upper assembly</li>
-              <li>Control box</li>
-              <li>Shotgun nozzle package</li>
-              <li><br><em>Optional: foot pedal and dump valve</em></li>
-            </ul>
+        <aside class="col-sm-3 col-sm-offset-1 aside-box">
+          <h3>Need Support?</h3>
+          <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+          <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
         </aside>
       </section>
 
@@ -180,7 +176,6 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/data-sheets/striker_skrl_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Lightweight Striker Brochure</a></li>
             <li><a href="/assets/pdf/tool-talks/striker_skrl_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Lightweight Striker Tool Talk</a></li>
 <!--            <li><a href="https://rise.articulate.com/share/rNzIsFHC_Z1xT-JHwgf9U22HLHAvINT9" target="_blank"><i class="fa fa-graduation-cap"></i> &nbsp;Lightweight Striker Product Training</a></li>-->
           </ul>
@@ -328,8 +323,8 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="/assets/pdf/data-sheets/striker_skrl_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Brochure</a></td>
           <td><a href="/assets/pdf/tool-talks/striker_skrl_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Tool Talk</a></td>
+          <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
     </div>
