--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -1008,18 +1008,20 @@ permalink: /waterblast-tools-automated-equipment
       </a>
     </div>
 
-    <div class="mix pipe-cleaning tank-cleaning accessories" data-name="pipe-extensions" data-designation="manual">
-      <a href="/pipe-extensions" class="search-text">
-        <img src="/assets/img/product/extensions-04.jpg" class="img-responsive" />
-        <h3>Pipe Extensions</h3>
-        <h5>For large pipe and vessel cleaning</h5>
+    <div class="mix pipe-cleaning" data-name="bjv" data-designation="manual">
+      <a href="/bjv" class="search-text">
+        <img src="/assets/img/product/bjv-10.jpg" class="img-responsive" />
+        <h3>BJV</h3>
+        <h5>Rotary cleaning nozzle</h5>
         <table class="table">
           <tbody>
             <tr>
-              <th colspan="2" style="text-align:center;">Reduce standoff distance</th>
+              <th>Pipe Size</th>
+              <td>6-180 in.<br><span class="metric">152 mm-4.5 m</span></td>
             </tr>
             <tr>
-              <td colspan="2" style="text-align:center;">Maximize jet power and material removal rates</td>
+              <th>Pressure Range</th>
+              <td>2–40k psi<br><span class="metric">140–2800 bar</span></td>
             </tr>
           </tbody>
         </table>
@@ -1028,19 +1030,19 @@ permalink: /waterblast-tools-automated-equipment
     </div>
 
     <div class="mix tank-cleaning accessories" data-name="positioning-booms" data-designation="automated">
-      <a href="/torus-booms" class="search-text">
-        <img src="/assets/img/product/torus-booms-01.jpg" class="img-responsive" />
-        <h3>Positioning Booms</h3>
+      <a href="/extension-boom" class="search-text">
+        <img src="/assets/img/product/torus-booms-02.jpg" class="img-responsive" />
+        <h3>&nbsp;<br>Extension Boom</h3>
         <h5>For Torus 3D tank cleaning tools</h5>
         <table class="table">
           <tbody>
             <tr>
               <th>Pressure</th>
-              <td>Up to 22k psi &nbsp;<span class="metric">1500 bar</span></td>
+              <td>Up to 12k psi <br><span class="metric">830 bar</span></td>
             </tr>
             <tr>
-              <th>Flow</th>
-              <td>Up to 200 gpm <br><span class="metric">757 l/min</span></td>
+              <th>Stroke Length</th>
+              <td>Up to 12 ft <br><span class="metric">3.7 m</span></td>
             </tr>
           </tbody>
         </table>
@@ -1069,6 +1071,27 @@ permalink: /waterblast-tools-automated-equipment
       </a>
     </div>
 
+    <div class="mix tank-cleaning accessories" data-name="positioning-booms" data-designation="automated">
+      <a href="/simple-boom" class="search-text">
+        <img src="/assets/img/product/boom-03.jpg" class="img-responsive" />
+        <h3>&nbsp;<br>Simple Boom</h3>
+        <h5>For Torus 3D tank cleaning tools</h5>
+        <table class="table">
+          <tbody>
+            <tr>
+              <th>Pressure</th>
+              <td>Up to 10k psi <br><span class="metric">700 bar</span></td>
+            </tr>
+            <tr>
+              <th>Flow</th>
+              <td>Up to 150 gpm <br><span class="metric">570 l/min</span></td>
+            </tr>
+          </tbody>
+        </table>
+        <button>View Details</button>
+      </a>
+    </div>
+
     <div class="mix tank-cleaning" data-name="sm-air" data-designation="automated">
       <a href="/sm-air" class="search-text">
         <img src="/assets/img/product/sm-air-01.jpg" class="img-responsive" />
@@ -1083,6 +1106,27 @@ permalink: /waterblast-tools-automated-equipment
             <tr>
               <th>Flow</th>
               <td>Up to 300 gpm <br><span class="metric">1140 l/min</span></td>
+            </tr>
+          </tbody>
+        </table>
+        <button>View Details</button>
+      </a>
+    </div>
+
+    <div class="mix tank-cleaning accessories" data-name="positioning-booms" data-designation="automated">
+      <a href="/teleboom" class="search-text">
+        <img src="/assets/img/product/boom-02.jpg" class="img-responsive" />
+        <h3>&nbsp;<br>TeleBoom</h3>
+        <h5>For Torus 3D tank cleaning tools</h5>
+        <table class="table">
+          <tbody>
+            <tr>
+              <th>Pressure</th>
+              <td>Up to 22k psi <br><span class="metric">1500 bar</span></td>
+            </tr>
+            <tr>
+              <th>Flow</th>
+              <td>Up to 100 gpm <br><span class="metric">380 l/min</span></td>
             </tr>
           </tbody>
         </table>
@@ -1703,6 +1747,25 @@ permalink: /waterblast-tools-automated-equipment
     </div>
 
     <div class="mix accessories" data-name="backout" data-designation="manual">
+      <a href="/pro-strap-mount" class="search-text">
+        <img src="/assets/img/product/bop-050-01.jpg" class="img-responsive" />
+        <h3>BOP-050</h3>
+        <h5>For pipe cleaning</h5>
+        <table class="table">
+          <tbody>
+            <tr>
+              <th colspan="2" style="text-align:center;">Strap mount for AutoBox ABX-PRO</th>
+            </tr>
+            <tr>
+              <td colspan="2" style="text-align:center;">For pipes with no flange</td>
+            </tr>
+          </tbody>
+        </table>
+        <button>View Details</button>
+      </a>
+    </div>
+
+    <div class="mix accessories" data-name="backout" data-designation="manual">
       <a href="/bop-622" class="search-text">
         <img src="/assets/img/product/abx-500-05.jpg" class="img-responsive" />
         <h3>BOP-622</h3>
@@ -1754,6 +1817,27 @@ permalink: /waterblast-tools-automated-equipment
             <tr>
               <th>Tools</th>
               <td>Banshee, Beetle</td>
+            </tr>
+          </tbody>
+        </table>
+        <button>View Details</button>
+      </a>
+    </div>
+
+    <div class="mix tank-cleaning accessories" data-name="positioning-booms" data-designation="automated">
+      <a href="/extension-boom" class="search-text">
+        <img src="/assets/img/product/torus-booms-02.jpg" class="img-responsive" />
+        <h3>&nbsp;<br>Extension Boom</h3>
+        <h5>For Torus 3D tank cleaning tools</h5>
+        <table class="table">
+          <tbody>
+            <tr>
+              <th>Pressure</th>
+              <td>Up to 12k psi <br><span class="metric">830 bar</span></td>
+            </tr>
+            <tr>
+              <th>Stroke Length</th>
+              <td>Up to 12 ft <br><span class="metric">3.7 m</span></td>
             </tr>
           </tbody>
         </table>
@@ -1858,27 +1942,6 @@ permalink: /waterblast-tools-automated-equipment
       </a>
     </div>
 
-    <div class="mix tank-cleaning accessories" data-name="positioning-booms" data-designation="automated">
-      <a href="/torus-booms" class="search-text">
-        <img src="/assets/img/product/torus-booms-01.jpg" class="img-responsive" />
-        <h3>Positioning Booms</h3>
-        <h5>For Torus 3D tank cleaning tools</h5>
-        <table class="table">
-          <tbody>
-            <tr>
-              <th>Pressure</th>
-              <td>Up to 22k psi &nbsp;<span class="metric">1500 bar</span></td>
-            </tr>
-            <tr>
-              <th>Flow</th>
-              <td>Up to 200 gpm <br><span class="metric">757 l/min</span></td>
-            </tr>
-          </tbody>
-        </table>
-        <button>View Details</button>
-      </a>
-    </div>
-
     <div class="mix pipe-cleaning" data-name="prodrain" data-designation="automated">
       <a href="/prodrain" class="search-text">
         <img src="/assets/img/product/prodrain-01.jpg" class="img-responsive" />
@@ -1919,26 +1982,47 @@ permalink: /waterblast-tools-automated-equipment
       </a>
     </div>
 
-<!--
-    <div class="mix accessories"x data-name="hwb" data-designation="manual">
-      <a href="/hose-reel" class="search-text">
-        <img src="/assets/img/product/hwb-01.jpg" class="img-responsive" />
-        <h3>HWB</h3>
-        <h5>High pressure hose storage reel</h5>
+    <div class="mix tank-cleaning accessories" data-name="positioning-booms" data-designation="automated">
+      <a href="/simple-boom" class="search-text">
+        <img src="/assets/img/product/boom-03.jpg" class="img-responsive" />
+        <h3>&nbsp;<br>Simple Boom</h3>
+        <h5>For Torus 3D tank cleaning tools</h5>
         <table class="table">
           <tbody>
             <tr>
-              <th colspan="2" style="text-align:center;">Safely stores hose rated up to 40k psi</th>
+              <th>Pressure</th>
+              <td>Up to 10k psi <br><span class="metric">700 bar</span></td>
             </tr>
             <tr>
-              <td colspan="2" style="text-align:center;">Air or hydraulic powered rewind systems available</td>
+              <th>Flow</th>
+              <td>Up to 150 gpm <br><span class="metric">570 l/min</span></td>
             </tr>
           </tbody>
         </table>
         <button>View Details</button>
       </a>
     </div>
--->
+
+    <div class="mix tank-cleaning accessories" data-name="positioning-booms" data-designation="automated">
+      <a href="/teleboom" class="search-text">
+        <img src="/assets/img/product/boom-02.jpg" class="img-responsive" />
+        <h3>&nbsp;<br>TeleBoom</h3>
+        <h5>For Torus 3D tank cleaning tools</h5>
+        <table class="table">
+          <tbody>
+            <tr>
+              <th>Pressure</th>
+              <td>Up to 22k psi <br><span class="metric">1500 bar</span></td>
+            </tr>
+            <tr>
+              <th>Flow</th>
+              <td>Up to 100 gpm <br><span class="metric">380 l/min</span></td>
+            </tr>
+          </tbody>
+        </table>
+        <button>View Details</button>
+      </a>
+    </div>
 
     <div class="mix accessories" data-name="ve-400" data-designation="manual">
       <a href="/ve-400" class="search-text">
